--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ body {
     grid-template-rows: 80px 1fr 1fr 100px;
     grid-gap: 1rem;
     padding: 1em;
+    /* using grid-template-areas to arragne order of divs */
+    grid-template-areas: 
+        "header header header"
+        "sidebar section1 section1"
+        "sidebar section2 section3"
+        "footer footer footer";
 }
 
 /* set a border for all div */
@@ -21,8 +27,33 @@ body {
     padding: 1em;
 }
 
-/* change all order and size of div contents */
+/* using grid-template-areas to arragne order of divs */
 .header {
+    grid-area: header;
+  }
+  
+  .sidebar {
+    grid-area: sidebar;
+  }
+  
+  .section1 {
+    grid-area: section1;
+  }
+  
+  .section2 {
+    grid-area: section2;
+  }
+  
+  .section3 {
+    grid-area: section3;
+  }
+  
+  .footer {
+    grid-area: footer;
+  }
+
+/* change all order and size of div section1*/
+/* .header {
     grid-row: 1 / 2;
     grid-column: 1 / 4;
   }
@@ -50,4 +81,4 @@ body {
   .footer {
     grid-row: 4 / 5;
     grid-column: 1 / 4;
-  }
+  } */
